# secured_1d_velocity_controller

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Earthfile  README.md  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  secured_1d_velocity_controller_parameters.html  unit_testing.html
.ci_cd/: fail_on_failed_tests.py
.github/workflows/: ci.yml  docs-sphinx-make-page.yml
_sources/: index.rst.txt  secured_1d_velocity_controller_parameters.md.txt  unit_testing.rst.txt
_sources/developer_guide/: unit_testing.rst.txt
_sources/quickstart/: installation.rst.txt
_sources/user_guide/: secured_1d_velocity_controller_parameters.md.txt
developer_guide/: unit_testing.html
docs/: Earthfile  conf.py  configuration_file_for_secured_1d_velocity_controller.yaml  index.rst  requirements.txt  secured_1d_velocity_controller_params.yaml  unit_testing.rst
docs/developer_guide/: unit_testing.rst
docs/quickstart/: installation.rst  secured_1d_velocity_controller_config_minimal_example.yaml  simple_example.rst
docs/user_guide/: secured_1d_velocity_controller.rst
include/secured_1d_velocity_controller/: secured_1d_velocity_controller.hpp  validate_secured_1d_velocity_controller_parameters.hpp  visibility_control.h
quickstart/: installation.html  simple_example.html
secured_1d_control_interfaces/: .pre-commit-config.yaml  CMakeLists.txt  Earthfile  README.md  package.xml  secured_1d_control_interfaces.ci.repos
secured_1d_control_interfaces/msg/: SecuredSingleDOFState.msg  SecuredSingleDOFStateStamped.msg
secured_1d_velocity_controller/: Earthfile  package.xml  secured_1d_velocity_controller.xml
secured_1d_velocity_controller/include/secured_1d_velocity_controller/: validate_secured_1d_velocity_controller_parameters.hpp
secured_1d_velocity_controller/test/: Earthfile  secured_1d_velocity_controller_preceeding_params.yaml  test_secured_1d_velocity_controller.hpp  test_secured_1d_velocity_controller_preceeding.cpp
src/: secured_1d_velocity_controller.cpp  secured_1d_velocity_controller.yaml
test/: Earthfile  secured_1d_velocity_controller_params.yaml  secured_1d_velocity_controller_preceeding_params.yaml  test_load_secured_1d_velocity_controller.cpp  test_secured_1d_velocity_controller.cpp  test_secured_1d_velocity_controller.hpp  test_secured_1d_velocity_controller_preceeding.cpp
user_guide/: secured_1d_velocity_controller.html  secured_1d_velocity_controller_parameters.html
