<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>secured_1D_velocity_controller</name>
  <version>0.0.0</version>
  <description>Simple velocity controller for a simple 1D joint that takes into account limit switches to prevent the joint to exceed limits by zeroing velocities that induce breaking limits.</description>
  <maintainer email="manuel.yguel@gmail.com">Manuel YGUEL</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
